fix player on tablet

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -46,6 +46,8 @@
 		background-color: rgb(60, 26, 182);
 		color: white;
 		border-radius: 10px;
+		margin-top: 13px;
+		padding-block: 17px;
 		.rhap_download-progress {
 			background-color: white;
 		}
